--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run predev && nodemon --exec ts-node ./index.ts", 
     "build": "tsc", 
-    "start": "node index.ts",
+    "start": "node build/index.js",
     "prestart": "npm run build", 
     "predev": "npm run build"
   },
